Fix: Cart item spacing.
Fix: Cart item spacing.

--- a/public/assets/src/scss/components/_buttons.scss
+++ b/public/assets/src/scss/components/_buttons.scss
@@ -13,6 +13,7 @@
     line-height: 1;
     fill: white;
     color: white;
+    border: none;
     padding: 15px 25px;
     border-radius: 3px;
     text-decoration: none;
@@ -25,6 +26,7 @@
 
         fill: white;
         color: white;
+        border: none;
         text-decoration: none;
         background: #00A1FF; 
         background: -webkit-linear-gradient(to left, #00A1FF, #0072FF);
@@ -142,6 +144,7 @@
     left: auto;
     right: 100px;
     bottom: 100px;
+    border: none;
     z-index: var(--adfy_woofc_trigger_button_zindex);
     fill: #555555;
     color: #555555;
